@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2004/02/02 13:02:49 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2004/02/14 17:21:35 jlam Exp $
 
 DISTNAME=		db-4.2.52
 PKGNAME=		${DISTNAME:S/db/db4/}
+PKGREVISION=		1
 CATEGORIES=		databases
 MASTER_SITES=	http://www.sleepycat.com/update/snapshot/
 
@@ -12,15 +13,16 @@ COMMENT=		Berkeley DB version 4 from Sleepycat Software
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=			${WRKDIR}/${DISTNAME}/build_unix
-USE_BUILDLINK3=		YES
+USE_BUILDLINK3=		yes
 USE_LANGUAGES=		c c++
-USE_LIBTOOL=		YES
-GNU_CONFIGURE=		YES
+USE_LIBTOOL=		yes
+GNU_CONFIGURE=		yes
 CONFIGURE_SCRIPT=	../dist/configure
 
 CONFIGURE_ARGS+=	--enable-cxx
 CONFIGURE_ARGS+=	--enable-rpc
 CONFIGURE_ARGS+=	--enable-shared
+CONFIGURE_ARGS+=	--enable-compat185
 CONFIGURE_ARGS+=	--includedir=${PREFIX}/include/db4
 CONFIGURE_ARGS+=	--program-transform-name=s,db_,db4_,
 
@@ -29,7 +31,7 @@ CONFIGURE_ARGS+=	--program-transform-name=s,db_,db4_,
 FC=     ${FALSE}
 F77=    ${FALSE}
 
-.if defined(WITH_JAVA) && (${WITH_JAVA} == "YES")
+.if defined(WITH_JAVA) && (${WITH_JAVA} == "yes")
 CONFIGURE_ARGS+=	--enable-java
 .  include "../../mk/java-vm.mk"
 .endif
