@@ -1,4 +1,4 @@
-# $NetBSD: buildlink3.mk,v 1.8 2004/03/10 18:06:08 jlam Exp $
+# $NetBSD: buildlink3.mk,v 1.9 2004/03/12 02:21:02 jlam Exp $
 
 BUILDLINK_DEPTH:=	${BUILDLINK_DEPTH}+
 DB4_BUILDLINK3_MK:=	${DB4_BUILDLINK3_MK}+
@@ -15,6 +15,7 @@ BUILDLINK_DEPENDS.db4+=		db4>=4.2.52
 BUILDLINK_PKGSRCDIR.db4?=	../../databases/db4
 
 .if defined(USE_DB185)
+BUILDLINK_DEPENDS.db4+=	db4>=4.2.52nb1	# older ones didn't enable 1.85 compat
 BUILDLINK_INCDIRS.db4?=	include/db4
 BUILDLINK_TRANSFORM+=	l:db:db4
 .endif
